# sys-arch-labs

./: .gitignore  .gitmodules  README.md
lab-1/: README.md  run.sh  workspace.dsl
lab-2/: README.md  compose.yaml  openapi-spec.yaml
lab-2/shop-service/: config.yaml  product.hpp  shop_handler.cpp  shop_service.cpp
lab-2/user-service/: CMakeLists.txt  auth_handler.cpp  config.yaml  user.cpp  user.hpp  user_handler.cpp  user_service.cpp
lab-3/: README.md  compose.yaml  devbuild.sh  devpostgres.sh  swagger-ui.sh
lab-3/cart-service/: Dockerfile  cart.cpp  cart.hpp  cart_handler.cpp  config.yaml
lab-3/middlewares/: cors_middleware.cpp
lab-3/postgres/: init.sql  seed.sh
lab-3/shop-service/: CMakeLists.txt  product.cpp  shop_handler.hpp
lab-3/user-service/: CMakeLists.txt  Dockerfile  auth_handler.hpp  user.cpp  user.hpp  user_service.cpp
lab-4/: README.md  compose.yaml  devmongo.sh  openapi-spec.yaml
lab-4/cart-service/: CMakeLists.txt  cart.hpp  cart_handler.cpp
lab-4/middlewares/: auth_middleware.cpp  auth_middleware.hpp
lab-4/mongo/: init.js
lab-4/shop-service/: CMakeLists.txt  Dockerfile  config.yaml  product.cpp  product.hpp  shop_handler.hpp  shop_service.cpp
lab-4/user-service/: config.yaml
lab-5/: README.md  compose.yaml
lab-5/cart-service/: cart.cpp  cart_handler.hpp  cart_service.cpp
lab-5/middlewares/: cors_middleware.hpp
lab-5/scripts/: benchmark.sh  mongo.sh  postgres.sh  swagger-ui.sh  valkey.sh
lab-5/shop-service/: .dockerignore  shop_handler.cpp
lab-5/user-service/: CMakeLists.txt  CMakePresets.json  config.yaml  secdist.json  user.cpp  user.hpp  user_handler.hpp  user_service.cpp
